welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: ';' expected but '[' found.
}[/!]
 ^Program:16: error: Unmatched closing brace '}' ignored here
}
^